codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__rejected_realtime_speech.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: "rendered.join(\"\\n\").replace(&thread_id.to_string(), \"<thread-id>\")"
---
• An answer to keep.
■ Voice conversation failed: thread/realtime/appendSpeech failed in TUI: thread/
│ realtime/appendSpeech failed: thread not found:
│ <thread-id> (code -32600)
