codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__voice_replay_reconciles_matching_captions.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: "normalize_voice_snapshot_directory(&rendered, &app.config.cwd)"
---
  >_ Codex v0.0.0
  GPT Test  /model to change
  /tmp/project
  Guarded access  /permissions to review

  Start with a task, or try /init, /model, /permissions.
› show <code> & tests
• spoken answer
› typed words
› show <code> & tests
› typed words
• different caption
